fixed the overflow outline on library & learn page links

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -952,6 +952,10 @@ h3.contribute-title {
     margin: 1em;
 }
 
+.label .nounderline img{
+  margin: .5em 0 0 0
+}
+
 .label h3 {
   color: white;
   position: absolute;
